--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ nav {
 nav ul li {
   display: inline-block;
   position: relative;
-  text-transform: uppercase;
   padding: 15px 0;
   text-align: center;
   cursor: pointer;
@@ -29,6 +28,14 @@ nav ul li a {
   font-size: clamp(1rem, 1.25vw, 1.25rem);
   text-decoration: none;
   color: #ffffff;
+}
+
+.findUS {
+  background: #2b2b2b;
+  border-radius: 2px;
+}
+.findUS:hover {
+  background: red;
 }
 
 .drop {
@@ -129,12 +136,403 @@ body {
 }
 
 h1 {
-  font-size: clamp(1.5rem, 5vw, 5rem);
+  font-size: clamp(2rem, 2.5vw, 5rem);
 }
 
-.test {
+.cover {
+  background: url("../Assets/Images/header-img-1440.jpg") no-repeat center center/cover;
+  height: 70vh;
+  position: relative;
+  text-align: left;
+  color: white;
+}
+@media (max-width: 505px) {
+  .cover {
+    height: 40vh;
+  }
+}
+@media (min-width: 506px) and (max-width: 768px) {
+  .cover {
+    height: 50vh;
+  }
+}
+@media (min-width: 769px) and (max-width: 992px) {
+  .cover {
+    height: 50vh;
+  }
+}
+.cover_info {
+  text-align: left;
+  color: white;
+  width: 40%;
+  position: absolute;
+  top: 15%;
+  left: 8%;
+}
+@media (max-width: 505px) {
+  .cover_info {
+    width: 80%;
+  }
+}
+.cover_info span {
+  color: #cc3535;
+  text-transform: uppercase;
+  font-size: clamp(0.8rem, 1.25vw, 1.9rem);
+}
+.cover_info h1 {
+  font-size: clamp(2rem, 2.5vw, 5rem);
+  padding: 20px 0;
+}
+.cover_info p {
+  color: grey;
+  border-left: 1px solid #cc3535;
+  padding-left: 20px;
+  font-size: clamp(0.8rem, 1.25vw, 1.9rem);
+}
+
+.aboutQ8 {
+  background: white;
+  padding: 10vh 0;
+  position: relative;
+}
+@media (max-width: 505px) {
+  .aboutQ8 {
+    padding: 5px 0;
+  }
+}
+@media (min-width: 506px) and (max-width: 768px) {
+  .aboutQ8 {
+    padding: 5px 0;
+  }
+}
+.aboutQ8_wrrap {
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+}
+@media (max-width: 505px) {
+  .aboutQ8_wrrap {
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media (min-width: 506px) and (max-width: 768px) {
+  .aboutQ8_wrrap {
+    display: flex;
+    flex-direction: column;
+  }
+}
+.aboutQ8_wrrap .car {
+  width: 30vw;
+  height: 68vh;
+  background: #161616;
+  padding: 0 40px;
+}
+@media (max-width: 505px) {
+  .aboutQ8_wrrap .car {
+    width: 100%;
+    height: 25vh;
+  }
+}
+@media (min-width: 506px) and (max-width: 768px) {
+  .aboutQ8_wrrap .car {
+    width: 100%;
+    height: 30vh;
+  }
+}
+@media (min-width: 769px) and (max-width: 992px) {
+  .aboutQ8_wrrap .car {
+    width: 40%;
+    height: 40vh;
+  }
+}
+.aboutQ8_wrrap .car img {
+  position: absolute;
+  width: 45vw;
+  top: 25%;
+  left: 5%;
+}
+@media (max-width: 505px) {
+  .aboutQ8_wrrap .car img {
+    width: 50%;
+    top: 8%;
+    left: 50%;
+    transform: translate(-50%);
+  }
+}
+@media (min-width: 506px) and (max-width: 768px) {
+  .aboutQ8_wrrap .car img {
+    width: 50%;
+    top: 3%;
+    left: 50%;
+    transform: translate(-50%);
+  }
+}
+.aboutQ8_wrrap .car p {
+  color: grey;
+  font-style: italic;
+  position: absolute;
+  text-align: center;
+  bottom: 10%;
+  left: 12%;
+  padding-bottom: 2vh;
+  font-size: clamp(0.8rem, 1.25vw, 1.9rem);
+}
+@media (max-width: 505px) {
+  .aboutQ8_wrrap .car p {
+    top: 18vh;
+    left: 50%;
+    font-size: 12px;
+    transform: translate(-50%);
+  }
+}
+@media (min-width: 506px) and (max-width: 768px) {
+  .aboutQ8_wrrap .car p {
+    top: 22vh;
+    left: 50%;
+    font-size: 1em;
+    transform: translate(-50%);
+  }
+}
+@media (min-width: 769px) and (max-width: 992px) {
+  .aboutQ8_wrrap .car p {
+    bottom: 20%;
+    left: 26%;
+    transform: translate(-50%);
+  }
+}
+.aboutQ8 .aboutQ8_info {
+  width: 45%;
+  height: fit-content;
+  padding: 30px;
+  margin-left: 15px;
+}
+@media (max-width: 505px) {
+  .aboutQ8 .aboutQ8_info {
+    padding: 30px 30px 0 30px;
+    width: 100%;
+  }
+}
+@media (min-width: 506px) and (max-width: 768px) {
+  .aboutQ8 .aboutQ8_info {
+    padding: 30px 30px 0 30px;
+    width: 100%;
+  }
+}
+.aboutQ8 .aboutQ8_info span {
+  color: #cc3535;
+  text-transform: uppercase;
+  font-size: clamp(0.8rem, 1.25vw, 1.9rem);
+}
+.aboutQ8 .aboutQ8_info h2 {
+  font-size: clamp(1.8rem, 1.4vw, 4rem);
+  padding: 20px 0;
+  font-weight: 900;
+}
+.aboutQ8 .aboutQ8_info p {
+  padding-bottom: 20px;
+  font-size: clamp(0.8rem, 1.25vw, 1.9rem);
+}
+.aboutQ8 .aboutQ8_info .second {
+  color: grey;
+}
+
+.featured {
+  background: linear-gradient(90deg, black 1%, rgba(0, 0, 0, 0) 55%), url("../Assets/Images/section-banner-1920.jpg") no-repeat center;
+  background-size: cover;
+  image-rendering: pixelated;
+  height: fit-content;
+  position: relative;
+}
+.featured_wrrap {
+  width: 55%;
+  padding: 4% 0 0 10%;
+}
+.featured_wrrap .promo {
+  color: #cc3535;
+  text-transform: uppercase;
+  font-weight: 900;
+  font-size: clamp(0.8rem, 1.25vw, 1.9rem);
+}
+.featured_wrrap h2 {
+  font-size: clamp(1.8rem, 1.4vw, 4rem);
+  padding: 20px 0;
+  font-weight: 900;
+  color: white;
+}
+.featured_wrrap p {
+  padding-bottom: 20px;
+  font-size: clamp(0.8rem, 1.25vw, 1.9rem);
+  color: white;
+}
+.featured_wrrap_boxes {
+  display: flex;
+  justify-content: space-evenly;
+  text-align: center;
+  padding: 30px 0;
+}
+@media (max-width: 505px) {
+  .featured_wrrap_boxes {
+    flex-direction: column;
+  }
+}
+.featured_wrrap_boxes .box {
+  width: 80%;
+  background: rgba(0, 0, 0, 0.6);
   padding: 10px;
-  font-size: clamp(1rem, 1.25vw, 1.25rem);
+  display: flex;
+  flex-direction: column;
+  margin-right: 5px;
+}
+@media (max-width: 505px) {
+  .featured_wrrap_boxes .box {
+    padding: 0;
+    margin-top: 5px;
+  }
+}
+.featured_wrrap_boxes .box span {
+  color: rgba(255, 255, 255, 0.898);
+  padding: 10px 0;
+  font-weight: 900;
+  font-size: clamp(0.8rem, 1.25vw, 1.9rem);
+}
+
+.offers {
+  background: white;
+  padding: 60px 0;
+  position: relative;
+}
+.offers h2 {
+  text-align: center;
+  font-size: clamp(1.8rem, 1.4vw, 4rem);
+}
+@media (min-width: 769px) and (max-width: 992px) {
+  .offers h2 {
+    font-size: 2.5rem;
+  }
+}
+.offers_wrrap {
+  width: 90%;
+  display: flex;
+  justify-content: space-evenly;
+  margin: 0 auto;
+  padding: 60px 0;
+}
+@media (max-width: 505px) {
+  .offers_wrrap {
+    flex-direction: column;
+  }
+}
+@media (min-width: 769px) and (max-width: 992px) {
+  .offers_wrrap {
+    flex-direction: column;
+  }
+}
+.offers_wrrap .examples {
+  padding: 10px 0;
+  width: 22%;
+  text-align: center;
+  box-shadow: 0px 0px 0px 0.5px lightgray;
+  margin: 0 auto;
+}
+@media (max-width: 505px) {
+  .offers_wrrap .examples {
+    width: 90%;
+    margin-bottom: 10px;
+  }
+}
+@media (min-width: 769px) and (max-width: 992px) {
+  .offers_wrrap .examples {
+    width: 90%;
+    margin-bottom: 15px;
+    box-shadow: 0px 0px 0px 1px lightgray;
+  }
+}
+.offers_wrrap .examples .cars {
+  text-align: center;
+  height: 13vh;
+}
+.offers_wrrap .examples .seatDoor {
+  text-align: center;
+  font-size: clamp(0.8rem, 1.25vw, 1.9rem);
+  padding: 5px 0;
+}
+@media (min-width: 769px) and (max-width: 992px) {
+  .offers_wrrap .examples .seatDoor {
+    font-size: 2rem;
+  }
+}
+.offers_wrrap .examples h3 {
+  text-align: center;
+  font-size: clamp(1.6rem, 1.2vw, 3rem);
+}
+@media (min-width: 769px) and (max-width: 992px) {
+  .offers_wrrap .examples h3 {
+    font-size: 2.7rem;
+  }
+}
+.offers_wrrap .examples p {
+  font-size: clamp(0.8rem, 1.25vw, 1.9rem);
+  padding: 4px 0;
+  margin-left: 28px;
+  opacity: 0.7;
+  text-align: left;
+}
+@media (min-width: 769px) and (max-width: 992px) {
+  .offers_wrrap .examples p {
+    font-size: 2rem;
+  }
+}
+.offers_wrrap .examples p img {
+  width: 6%;
+  margin: 0 auto;
+}
+.offers_wrrap .examples div {
+  display: flex;
+  justify-content: space-evenly;
+  padding-top: 10px;
+  vertical-align: bottom;
+}
+.offers_wrrap .examples div .price {
+  font-size: clamp(0.8rem, 1.25vw, 1.9rem);
+  padding: 0;
+  margin: 0;
+}
+@media (min-width: 769px) and (max-width: 992px) {
+  .offers_wrrap .examples div .price {
+    font-size: 2rem;
+  }
+}
+.offers_wrrap .examples div span {
+  font-weight: 900;
+  font-size: 1.4rem;
+}
+@media (min-width: 769px) and (max-width: 992px) {
+  .offers_wrrap .examples div span {
+    font-size: 2rem;
+  }
+}
+.offers_wrrap .examples div .btn {
+  border-radius: 20px;
+  padding: 0px 20px;
+  background: #f8e0e6;
+  border: none;
+  color: red;
+  font-size: 1vw;
+  font-weight: bold;
+  cursor: pointer;
+}
+@media (max-width: 505px) {
+  .offers_wrrap .examples div .btn {
+    font-size: 1rem;
+  }
+}
+@media (min-width: 769px) and (max-width: 992px) {
+  .offers_wrrap .examples div .btn {
+    font-size: 1.8rem;
+    padding: 5px 30px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
