--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,7 +7,6 @@
     box-sizing: border-box;
     font-family: "Montserrat", sans-serif;
     text-decoration: none;
-
 }
 
 body {
@@ -18,12 +17,378 @@ body {
     padding: 0;
 }
 
-
-h1{
+h1 {
     font-size: $h1;
 }
 
-.test{
-    padding: 10px;
-    font-size: $P;
+.cover {
+    background: url("../Assets/Images/header-img-1440.jpg") no-repeat center center/cover;
+    height: 70vh;
+    position: relative;
+    text-align: left;
+    color: white;
+    @include eXSmall {
+        height: 40vh;
+    }
+    @include mobile {
+        height: 50vh;
+    }
+    @include tablet {
+        height: 50vh;
+    }
+    // @include xl{
+    //    height: 40vh;
+    // }
+
+    &_info {
+        text-align: left;
+        color: white;
+        width: 40%;
+        position: absolute;
+        top: 15%;
+        left: 8%;
+        @include eXSmall {
+            width: 80%;
+        }
+
+        span {
+            color: rgb(204, 53, 53);
+            text-transform: uppercase;
+            font-size: $P;
+        }
+
+        h1 {
+            font-size: $h1;
+            padding: 20px 0;
+        }
+
+        p {
+            color: grey;
+            border-left: 1px solid rgb(204, 53, 53);
+            padding-left: 20px;
+            font-size: $P;
+        }
+    }
+}
+
+// About Q8 section
+
+.aboutQ8 {
+    background: white;
+    padding: 10vh 0;
+    position: relative;
+    @include eXSmall {
+        padding: 5px 0;
+    }
+    @include mobile {
+        padding: 5px 0;
+    }
+
+    &_wrrap {
+        width: 90%;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-around;
+        @include eXSmall {
+            display: flex;
+            flex-direction: column;
+        }
+        @include mobile {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .car {
+            width: 30vw;
+            height: 68vh;
+            background: rgb(22, 22, 22);
+            padding: 0 40px;
+            @include eXSmall {
+                width: 100%;
+                height: 25vh;
+            }
+            @include mobile {
+                width: 100%;
+                height: 30vh;
+            }
+
+            @include tablet {
+                width: 40%;
+                height: 40vh;
+            }
+
+            img {
+                position: absolute;
+                width: 45vw;
+                top: 25%;
+                left: 5%;
+                @include eXSmall {
+                    width: 50%;
+                    top: 8%;
+                    left: 50%;
+                    transform: translate(-50%);
+                }
+                @include mobile {
+                    width: 50%;
+                    top: 3%;
+                    left: 50%;
+                    transform: translate(-50%);
+                }
+            }
+
+            p {
+                color: grey;
+                font-style: italic;
+                position: absolute;
+                text-align: center;
+                bottom: 10%;
+                left: 12%;
+                padding-bottom: 2vh;
+                font-size: $P;
+                @include eXSmall {
+                    top: 18vh;
+                    left: 50%;
+                    font-size: 12px;
+                    transform: translate(-50%);
+                }
+                @include mobile {
+                    top: 22vh;
+                    left: 50%;
+                    font-size: 1em;
+                    transform: translate(-50%);
+                }
+                @include tablet {
+                    bottom: 20%;
+                    left: 26%;
+                    transform: translate(-50%);
+                }
+            }
+        }
+    }
+
+    .aboutQ8_info {
+        width: 45%;
+        height: fit-content;
+        padding: 30px;
+        margin-left: 15px;
+        @include eXSmall {
+            padding: 30px 30px 0 30px;
+            width: 100%;
+        }
+        @include mobile {
+            padding: 30px 30px 0 30px;
+            width: 100%;
+        }
+
+        span {
+            color: rgb(204, 53, 53);
+            text-transform: uppercase;
+            font-size: $P;
+        }
+
+        h2 {
+            font-size: $h2;
+            padding: 20px 0;
+            font-weight: 900;
+        }
+
+        p {
+            padding-bottom: 20px;
+            font-size: $P;
+        }
+
+        .second {
+            color: grey;
+        }
+    }
+}
+
+// Featured Q8 Section
+
+.featured {
+    background: linear-gradient(90deg, rgba(0, 0, 0, 1) 1%, rgba(0, 0, 0, 0) 55%),
+        url("../Assets/Images/section-banner-1920.jpg") no-repeat center;
+    background-size: cover;
+    image-rendering: pixelated;
+    height: fit-content;
+    position: relative;
+
+    &_wrrap {
+        width: 55%;
+        padding: 4% 0 0 10%;
+
+        .promo {
+            color: rgb(204, 53, 53);
+            text-transform: uppercase;
+            font-weight: 900;
+            font-size: $P;
+        }
+
+        h2 {
+            font-size: $h2;
+            padding: 20px 0;
+            font-weight: 900;
+            color: white;
+        }
+
+        p {
+            padding-bottom: 20px;
+            font-size: $P;
+            color: white;
+        }
+
+        &_boxes {
+            display: flex;
+            justify-content: space-evenly;
+            text-align: center;
+            padding: 30px 0;
+            @include eXSmall {
+                flex-direction: column;
+            }
+
+            .box {
+                width: 80%;
+                background: rgba($color: #000000, $alpha: 0.6);
+                padding: 10px;
+                display: flex;
+                flex-direction: column;
+                margin-right: 5px;
+                @include eXSmall {
+                    padding: 0;
+                    margin-top: 5px;
+                }
+
+                span {
+                    @include boxes();
+                }
+            }
+        }
+    }
+}
+
+// Offer of best products/cars
+
+.offers {
+    background: white;
+    padding: 60px 0;
+    position: relative;
+
+    h2 {
+        text-align: center;
+        font-size: $h2;
+        @include tablet {
+            font-size: 2.5rem;
+        }
+    }
+
+    &_wrrap {
+        width: 90%;
+        display: flex;
+        justify-content: space-evenly;
+        margin: 0 auto;
+        padding: 60px 0;
+        @include eXSmall {
+            flex-direction: column;
+        }
+        @include tablet {
+            flex-direction: column;
+        }
+
+        .examples {
+            padding: 10px 0;
+            width: 22%;
+            text-align: center;
+            box-shadow: 0px 0px 0px 0.5px lightgray;
+            margin: 0 auto;
+            @include eXSmall {
+                width: 90%;
+                margin-bottom: 10px;
+            }
+            @include tablet {
+                width: 90%;
+                margin-bottom: 15px;
+                box-shadow: 0px 0px 0px 1px lightgray;
+            }
+
+            .cars {
+                text-align: center;
+                height: 13vh;
+            }
+
+            .seatDoor {
+                text-align: center;
+                font-size: $P;
+                padding: 5px 0;
+                @include tablet {
+                    font-size: 2rem;
+                }
+            }
+
+            h3 {
+                text-align: center;
+                font-size: $h3;
+                @include tablet {
+                    font-size: 2.7rem;
+                }
+            }
+
+            p {
+                font-size: $P;
+                padding: 4px 0;
+                margin-left: 28px;
+                opacity: 0.7;
+                text-align: left;
+                @include tablet {
+                    font-size: 2rem;
+                }
+
+                img {
+                    width: 6%;
+                    margin: 0 auto;
+                }
+            }
+
+            div {
+                display: flex;
+                justify-content: space-evenly;
+                padding-top: 10px;
+                vertical-align: bottom;
+
+                .price {
+                    font-size: $P;
+                    padding: 0;
+                    margin: 0;
+                    @include tablet {
+                        font-size: 2rem;
+                    }
+                }
+
+                span {
+                    font-weight: 900;
+                    font-size: 1.4rem;
+                    @include tablet {
+                        font-size: 2rem;
+                    }
+                }
+
+                .btn {
+                    border-radius: 20px;
+                    padding: 0px 20px;
+                    background: #f8e0e6;
+                    border: none;
+                    color: red;
+                    font-size: 1vw;
+                    font-weight: bold;
+                    cursor: pointer;
+                    @include eXSmall {
+                        font-size: 1rem;
+                    }
+                    @include tablet {
+                        font-size: 1.8rem;
+                        padding: 5px 30px;
+                    }
+                }
+            }
+        }
+    }
 }
