--- a/sass/style.scss
+++ b/sass/style.scss
@@ -36,9 +36,7 @@ h1 {
     @include tablet {
         height: 50vh;
     }
-    // @include xl{
-    //    height: 40vh;
-    // }
+ 
 
     &_info {
         text-align: left;
@@ -55,11 +53,17 @@ h1 {
             color: rgb(204, 53, 53);
             text-transform: uppercase;
             font-size: $P;
+            @include wide{
+                font-size: 4rem;
+            }
         }
 
         h1 {
             font-size: $h1;
             padding: 20px 0;
+            @include wide{
+                font-size: 6rem;
+            }
         }
 
         p {
@@ -67,6 +71,9 @@ h1 {
             border-left: 1px solid rgb(204, 53, 53);
             padding-left: 20px;
             font-size: $P;
+            @include wide{
+                font-size: 3rem;
+            }
         }
     }
 }
@@ -162,6 +169,12 @@ h1 {
                     left: 26%;
                     transform: translate(-50%);
                 }
+                @include wide {
+                    bottom: 20%;
+                    left: 25%;
+                    transform: translate(-50%);
+                    font-size: 3rem;
+                }
             }
         }
     }
@@ -184,17 +197,26 @@ h1 {
             color: rgb(204, 53, 53);
             text-transform: uppercase;
             font-size: $P;
+            @include wide{
+                font-size: 4rem;
+            }
         }
 
         h2 {
             font-size: $h2;
             padding: 20px 0;
             font-weight: 900;
+            @include wide{
+                font-size: 6rem;
+            }
         }
 
         p {
             padding-bottom: 20px;
             font-size: $P;
+            @include wide{
+                font-size: 4rem;
+            }
         }
 
         .second {
@@ -222,6 +244,9 @@ h1 {
             text-transform: uppercase;
             font-weight: 900;
             font-size: $P;
+            @include wide{
+                font-size: 4rem;
+            }
         }
 
         h2 {
@@ -229,12 +254,18 @@ h1 {
             padding: 20px 0;
             font-weight: 900;
             color: white;
+            @include wide{
+                font-size: 5rem;
+            }
         }
 
         p {
             padding-bottom: 20px;
             font-size: $P;
             color: white;
+            @include wide{
+                font-size: 4rem;
+            }
         }
 
         &_boxes {
@@ -279,6 +310,9 @@ h1 {
         @include tablet {
             font-size: 2.5rem;
         }
+        @include wide{
+            font-size: 6rem;
+        }
     }
 
     &_wrrap {
@@ -322,6 +356,9 @@ h1 {
                 @include tablet {
                     font-size: 2rem;
                 }
+                @include wide{
+                    font-size: 3rem;
+                }
             }
 
             h3 {
@@ -329,6 +366,9 @@ h1 {
                 font-size: $h3;
                 @include tablet {
                     font-size: 2.7rem;
+                }
+                @include wide{
+                    font-size: 4rem;
                 }
             }
 
@@ -340,6 +380,9 @@ h1 {
                 text-align: left;
                 @include tablet {
                     font-size: 2rem;
+                }
+                @include wide{
+                    font-size: 4rem;
                 }
 
                 img {
@@ -361,6 +404,9 @@ h1 {
                     @include tablet {
                         font-size: 2rem;
                     }
+                    @include wide{
+                        font-size: 3rem;
+                    }
                 }
 
                 span {
@@ -368,6 +414,9 @@ h1 {
                     font-size: 1.4rem;
                     @include tablet {
                         font-size: 2rem;
+                    }
+                    @include wide{
+                        font-size: 3rem;
                     }
                 }
 
@@ -387,8 +436,189 @@ h1 {
                         font-size: 1.8rem;
                         padding: 5px 30px;
                     }
+                    @include wide{
+                        font-size: 2rem;
+                        padding: 5px 30px;
+
+                    }
                 }
             }
+        }
+    }
+}
+
+// Contact forms
+
+.final {
+    background: rgb(26, 23, 23);
+    width: 100%;
+    height: fit-content;
+    position: relative;
+
+    &_last {
+        width: 80%;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        padding-top: 40px;
+        @include eXSmall{
+            flex-direction: column;
+        }
+        @include tablet{
+            flex-direction: column;
+        }
+
+        div {
+            width: 45%;
+            z-index: 22;
+            @include eXSmall{
+                width: 90%;
+                margin: 0 auto;
+            }
+            @include tablet{
+                width: 90%;
+                margin: 0 auto;
+            }
+            span {
+                color: rgb(204, 53, 53);
+                text-transform: uppercase;
+                font-weight: 900;
+                font-size: 1.6rem;
+                @include eXSmall{
+                   font-size: $P;
+                }
+                @include wide{
+                    font-size: 3.5rem;
+                }
+            }
+
+            h2 {
+                font-size: $h2;
+                padding: 20px 0;
+                font-weight: 900;
+                color: white;
+                @include eXSmall{
+                    font-size: 1.3em;
+                }
+                @include tablet{
+                    font-size: 1.8em;
+                }
+                @include wide{
+                    font-size: 5rem;
+                }
+                
+            }
+        }
+
+        img {
+            position: absolute;
+            z-index: 21;
+            width: 60%;
+            left: -8%;
+            bottom: 0%;
+            @include eXSmall{
+                display: none;
+            }
+            @include tablet{
+                display: none;
+            }
+          
+        }
+
+    
+    
+    }
+}
+
+.contact {
+    z-index: 20;
+    width: 40%;
+    height: 80%;
+    padding: 20px 0 30px 60px;
+    background: #0a2a0aaf;
+    @include eXSmall{
+        height: 60%;
+        padding: 10px 0 20px 30px;
+    }
+    @include tablet{
+        height: 60%;
+        margin: 0 auto;
+    }
+
+
+  
+    input {
+        width: 80%;
+        height: 50px;
+        background: #325f4a8e;
+        color: #fff;
+        margin: 3% 0;
+        font-size: 1.2vw;
+        padding-left: 4%;
+        border-radius: 3px;
+        border: none;
+        outline: none;
+        @include eXSmall{
+            width: 90%;
+            margin: 5px 0;
+            font-size: 1rem;
+        }
+        @include tablet{
+            width: 90%;
+            margin: 5px 0;
+            font-size: 1.4rem;
+        }
+        @include wide{
+            font-size: 3rem;
+        }
+     
+    }
+
+    textarea {
+        width: 80%;
+        height: 18vh;
+        margin-top: 3%;
+        background: #325f4a8e;
+        color: #fff;
+        outline: none;
+        font-size: 1.2vw;
+        padding: 2% 0 0 4%;
+        border-radius: 3px;
+        border: none;
+        @include eXSmall{
+            width: 90%;
+            padding: 5px 0 0 4%;
+            font-size: 1rem;
+        }
+        @include tablet{
+            width: 90%;
+            margin-top: 1%;
+            padding: 5px 0 0 4%;
+            font-size: 1.4rem;
+        }
+        @include wide{
+            font-size: 3rem;
+        }
+    }
+
+    .submit {
+        width: 45%;
+        padding: 10px 15px;
+        background: #0a2a0aaf;
+        border: 1px solid gray;
+        text-align: center;
+        font-size: 1.2rem;
+        margin: 10% 0 0 20%;
+        color: white;
+        cursor: pointer;
+        @include wide{
+            font-size: 3rem;
+            height: fit-content;
+        }
+
+        &:hover {
+            background: #fff;
+            color: #000;
         }
     }
 }
