--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -3,6 +3,9 @@
     padding: 10px 0;
     font-weight: 900;
     font-size: $P;
+    @include wide{
+        font-size: 2.5rem;
+    }
 }
 
 @mixin transform($value) {
@@ -36,12 +39,12 @@
     }
 }
 @mixin tablet {
-    @media (min-width:769px ) and (max-width: $lg) {
+    @media (min-width:768px ) and (max-width: $lg) {
         @content;
     }
 }
-@mixin lg {
-    @media (max-width: $lg ) {
+@mixin wide {
+    @media (min-width:2160px){
         @content;
     }
 }
