--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -3,7 +3,7 @@
     padding: 10px 0;
     font-weight: 900;
     font-size: $P;
-    @include wide{
+    @include wide {
         font-size: 2.5rem;
     }
 }
@@ -21,40 +21,30 @@
     transition: ($value);
 }
 
-  $md: 768px;
-  $lg: 992px;
-  $xl: 1200px;
-  $xxl: 1400px;
+$md: 768px;
+$lg: 992px;
+$wide: 2160px;
+
 
 @mixin eXSmall {
     @media (max-width: 505px) {
         @content;
     }
-    
-}  
+}
 
 @mixin mobile {
-    @media (min-width:506px ) and(max-width: $md) {
+    @media (min-width: 506px) and(max-width: $md) {
         @content;
     }
 }
 @mixin tablet {
-    @media (min-width:768px ) and (max-width: $lg) {
+    @media (min-width: 768px) and (max-width: $lg) {
         @content;
     }
 }
 @mixin wide {
-    @media (min-width:2160px){
+    @media (min-width: $wide) {
         @content;
     }
 }
-@mixin xl {
-    @media (max-width: $xl) {
-        @content;
-    }
-}
-@mixin xxl {
-    @media (max-width: $xxl) {
-        @content;
-    }
-}
+
