--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,18 +7,14 @@
     box-sizing: border-box;
     font-family: "Montserrat", sans-serif;
     text-decoration: none;
+    padding: 0;
+    margin: 0;
 }
 
 body {
     width: 100%;
     margin: 0 auto;
     font-size: 1rem;
-    margin: 0;
-    padding: 0;
-}
-
-h1 {
-    font-size: $h1;
 }
 
 .cover {
@@ -36,7 +32,6 @@ h1 {
     @include tablet {
         height: 50vh;
     }
- 
 
     &_info {
         text-align: left;
@@ -53,7 +48,7 @@ h1 {
             color: rgb(204, 53, 53);
             text-transform: uppercase;
             font-size: $P;
-            @include wide{
+            @include wide {
                 font-size: 4rem;
             }
         }
@@ -61,7 +56,10 @@ h1 {
         h1 {
             font-size: $h1;
             padding: 20px 0;
-            @include wide{
+            @include mobile {
+                font-size: 1.4rem;
+            }
+            @include wide {
                 font-size: 6rem;
             }
         }
@@ -71,7 +69,10 @@ h1 {
             border-left: 1px solid rgb(204, 53, 53);
             padding-left: 20px;
             font-size: $P;
-            @include wide{
+            @include mobile {
+                font-size: 0.9rem;
+            }
+            @include wide {
                 font-size: 3rem;
             }
         }
@@ -90,6 +91,9 @@ h1 {
     @include mobile {
         padding: 5px 0;
     }
+    @include tablet {
+        padding: 5px 0;
+    }
 
     &_wrrap {
         width: 90%;
@@ -97,11 +101,12 @@ h1 {
         display: flex;
         justify-content: space-around;
         @include eXSmall {
-            display: flex;
             flex-direction: column;
         }
         @include mobile {
-            display: flex;
+            flex-direction: column;
+        }
+        @include tablet {
             flex-direction: column;
         }
 
@@ -120,14 +125,14 @@ h1 {
             }
 
             @include tablet {
-                width: 40%;
-                height: 40vh;
+                width: 100%;
+                height: 30vh;
             }
 
             img {
                 position: absolute;
                 width: 45vw;
-                top: 25%;
+                top: 20%;
                 left: 5%;
                 @include eXSmall {
                     width: 50%;
@@ -141,6 +146,12 @@ h1 {
                     left: 50%;
                     transform: translate(-50%);
                 }
+                @include tablet {
+                    width: 50%;
+                    top: 3%;
+                    left: 50%;
+                    transform: translate(-50%);
+                }
             }
 
             p {
@@ -148,7 +159,7 @@ h1 {
                 font-style: italic;
                 position: absolute;
                 text-align: center;
-                bottom: 10%;
+                top: 80%;
                 left: 12%;
                 padding-bottom: 2vh;
                 font-size: $P;
@@ -165,9 +176,10 @@ h1 {
                     transform: translate(-50%);
                 }
                 @include tablet {
-                    bottom: 20%;
-                    left: 26%;
+                    top: 38%;
+                    left: 50%;
                     transform: translate(-50%);
+                    font-size: 1.2rem;
                 }
                 @include wide {
                     bottom: 20%;
@@ -178,50 +190,62 @@ h1 {
             }
         }
     }
+}
 
-    .aboutQ8_info {
-        width: 45%;
-        height: fit-content;
-        padding: 30px;
-        margin-left: 15px;
-        @include eXSmall {
-            padding: 30px 30px 0 30px;
-            width: 100%;
-        }
-        @include mobile {
-            padding: 30px 30px 0 30px;
-            width: 100%;
-        }
+// Left size about Q8, text info
 
-        span {
-            color: rgb(204, 53, 53);
-            text-transform: uppercase;
-            font-size: $P;
-            @include wide{
-                font-size: 4rem;
-            }
-        }
+.aboutQ8_info {
+    width: 45%;
+    height: fit-content;
+    padding: 30px;
+    margin-left: 15px;
+    @include eXSmall {
+        padding: 30px 30px 0 30px;
+        width: 100%;
+    }
+    @include mobile {
+        padding: 30px 30px 0 30px;
+        width: 100%;
+    }
+    @include tablet {
+        padding: 30px 30px 0 30px;
+        width: 100%;
+    }
 
-        h2 {
-            font-size: $h2;
-            padding: 20px 0;
-            font-weight: 900;
-            @include wide{
-                font-size: 6rem;
-            }
+    span {
+        color: rgb(204, 53, 53);
+        text-transform: uppercase;
+        font-size: $P;
+        @include wide {
+            font-size: 4rem;
         }
+    }
 
-        p {
-            padding-bottom: 20px;
-            font-size: $P;
-            @include wide{
-                font-size: 4rem;
-            }
+    h2 {
+        font-size: $h2;
+        padding: 20px 0;
+        font-weight: 900;
+        @include tablet {
+            font-size: 1.7rem;
         }
+        @include wide {
+            font-size: 6rem;
+        }
+    }
 
-        .second {
-            color: grey;
+    p {
+        padding-bottom: 20px;
+        font-size: $P;
+        @include wide {
+            font-size: 4rem;
         }
+        @include tablet {
+            font-size: 1rem;
+        }
+    }
+
+    .second {
+        color: grey;
     }
 }
 
@@ -244,7 +268,7 @@ h1 {
             text-transform: uppercase;
             font-weight: 900;
             font-size: $P;
-            @include wide{
+            @include wide {
                 font-size: 4rem;
             }
         }
@@ -254,7 +278,7 @@ h1 {
             padding: 20px 0;
             font-weight: 900;
             color: white;
-            @include wide{
+            @include wide {
                 font-size: 5rem;
             }
         }
@@ -263,7 +287,7 @@ h1 {
             padding-bottom: 20px;
             font-size: $P;
             color: white;
-            @include wide{
+            @include wide {
                 font-size: 4rem;
             }
         }
@@ -310,7 +334,7 @@ h1 {
         @include tablet {
             font-size: 2.5rem;
         }
-        @include wide{
+        @include wide {
             font-size: 6rem;
         }
     }
@@ -324,10 +348,13 @@ h1 {
         @include eXSmall {
             flex-direction: column;
         }
+        @include mobile {
+            flex-direction: column;
+        }
         @include tablet {
             flex-direction: column;
         }
-
+        // Boxes with cars and specs
         .examples {
             padding: 10px 0;
             width: 22%;
@@ -337,6 +364,11 @@ h1 {
             @include eXSmall {
                 width: 90%;
                 margin-bottom: 10px;
+            }
+            @include mobile {
+                width: 90%;
+                margin-bottom: 15px;
+                box-shadow: 0px 0px 0px 1px lightgray;
             }
             @include tablet {
                 width: 90%;
@@ -356,7 +388,7 @@ h1 {
                 @include tablet {
                     font-size: 2rem;
                 }
-                @include wide{
+                @include wide {
                     font-size: 3rem;
                 }
             }
@@ -367,7 +399,7 @@ h1 {
                 @include tablet {
                     font-size: 2.7rem;
                 }
-                @include wide{
+                @include wide {
                     font-size: 4rem;
                 }
             }
@@ -381,7 +413,7 @@ h1 {
                 @include tablet {
                     font-size: 2rem;
                 }
-                @include wide{
+                @include wide {
                     font-size: 4rem;
                 }
 
@@ -404,7 +436,7 @@ h1 {
                     @include tablet {
                         font-size: 2rem;
                     }
-                    @include wide{
+                    @include wide {
                         font-size: 3rem;
                     }
                 }
@@ -415,7 +447,7 @@ h1 {
                     @include tablet {
                         font-size: 2rem;
                     }
-                    @include wide{
+                    @include wide {
                         font-size: 3rem;
                     }
                 }
@@ -432,14 +464,23 @@ h1 {
                     @include eXSmall {
                         font-size: 1rem;
                     }
+                    @include mobile {
+                        font-size: 1rem;
+                        padding: 5px 30px;
+                    }
                     @include tablet {
                         font-size: 1.8rem;
                         padding: 5px 30px;
                     }
-                    @include wide{
+                    @include wide {
                         font-size: 2rem;
                         padding: 5px 30px;
-
+                    }
+                    &:hover {
+                        background: white;
+                        color: #000;
+                        border: 0.5px solid lightgray;
+                        transition: 0.5s ease;
                     }
                 }
             }
@@ -461,21 +502,28 @@ h1 {
         display: flex;
         justify-content: space-between;
         padding-top: 40px;
-        @include eXSmall{
+        @include eXSmall {
             flex-direction: column;
         }
-        @include tablet{
+        @include mobile {
+            flex-direction: column;
+        }
+        @include tablet {
             flex-direction: column;
         }
 
         div {
             width: 45%;
             z-index: 22;
-            @include eXSmall{
+            @include eXSmall {
                 width: 90%;
                 margin: 0 auto;
             }
-            @include tablet{
+            @include mobile {
+                width: 90%;
+                margin: 0 auto;
+            }
+            @include tablet {
                 width: 90%;
                 margin: 0 auto;
             }
@@ -484,10 +532,10 @@ h1 {
                 text-transform: uppercase;
                 font-weight: 900;
                 font-size: 1.6rem;
-                @include eXSmall{
-                   font-size: $P;
+                @include eXSmall {
+                    font-size: $P;
                 }
-                @include wide{
+                @include wide {
                     font-size: 3.5rem;
                 }
             }
@@ -497,16 +545,19 @@ h1 {
                 padding: 20px 0;
                 font-weight: 900;
                 color: white;
-                @include eXSmall{
+                @include eXSmall {
                     font-size: 1.3em;
                 }
-                @include tablet{
+                @include mobile {
+                    font-size: 1.6em;
+                    text-align: justify;
+                }
+                @include tablet {
                     font-size: 1.8em;
                 }
-                @include wide{
+                @include wide {
                     font-size: 5rem;
                 }
-                
             }
         }
 
@@ -516,17 +567,16 @@ h1 {
             width: 60%;
             left: -8%;
             bottom: 0%;
-            @include eXSmall{
+            @include eXSmall {
                 display: none;
             }
-            @include tablet{
+            @include mobile {
                 display: none;
             }
-          
+            @include tablet {
+                display: none;
+            }
         }
-
-    
-    
     }
 }
 
@@ -536,17 +586,19 @@ h1 {
     height: 80%;
     padding: 20px 0 30px 60px;
     background: #0a2a0aaf;
-    @include eXSmall{
+    @include eXSmall {
         height: 60%;
         padding: 10px 0 20px 30px;
     }
-    @include tablet{
+    @include mobile {
+        height: 60%;
+        margin: 0 auto;
+    }
+    @include tablet {
         height: 60%;
         margin: 0 auto;
     }
 
-
-  
     input {
         width: 80%;
         height: 50px;
@@ -558,20 +610,24 @@ h1 {
         border-radius: 3px;
         border: none;
         outline: none;
-        @include eXSmall{
+        @include eXSmall {
             width: 90%;
             margin: 5px 0;
             font-size: 1rem;
         }
-        @include tablet{
+        @include mobile {
             width: 90%;
             margin: 5px 0;
             font-size: 1.4rem;
         }
-        @include wide{
+        @include tablet {
+            width: 90%;
+            margin: 5px 0;
+            font-size: 1.4rem;
+        }
+        @include wide {
             font-size: 3rem;
         }
-     
     }
 
     textarea {
@@ -585,18 +641,24 @@ h1 {
         padding: 2% 0 0 4%;
         border-radius: 3px;
         border: none;
-        @include eXSmall{
+        @include eXSmall {
             width: 90%;
             padding: 5px 0 0 4%;
             font-size: 1rem;
         }
-        @include tablet{
+        @include mobile {
             width: 90%;
             margin-top: 1%;
             padding: 5px 0 0 4%;
             font-size: 1.4rem;
         }
-        @include wide{
+        @include tablet {
+            width: 90%;
+            margin-top: 1%;
+            padding: 5px 0 0 4%;
+            font-size: 1.4rem;
+        }
+        @include wide {
             font-size: 3rem;
         }
     }
@@ -611,7 +673,7 @@ h1 {
         margin: 10% 0 0 20%;
         color: white;
         cursor: pointer;
-        @include wide{
+        @include wide {
             font-size: 3rem;
             height: fit-content;
         }
@@ -619,6 +681,51 @@ h1 {
         &:hover {
             background: #fff;
             color: #000;
+        }
+    }
+}
+
+// Footer
+
+footer {
+    background: rgb(26, 23, 23);
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    font-size: 1rem;
+    font-weight: 900;
+    color: gray;
+    @include eXSmall {
+        flex-direction: column;
+        font-size: 0.8rem;
+    }
+    @include mobile {
+        flex-direction: column;
+        text-align: center;
+    }
+    @include tablet {
+        font-size: 0.8rem;
+        text-align: start;
+    }
+    @include wide {
+        font-size: 2rem;
+    }
+    p {
+        margin: 25px 80px;
+        @include eXSmall {
+            margin: 5px 0;
+            text-align: center;
+        }
+        @include tablet {
+            text-align: center;
+        }
+
+        a {
+            text-decoration: none;
+            color: gray;
+        }
+        a:hover {
+            color: white;
         }
     }
 }
